# everything

./: .envrc  .gitignore  .sops.yaml  CLAUDE.md  README.md
.claude/: settings.local.json
andref-ipfs-depot/: Cargo.toml  deny.toml  flake.nix
andref-ipfs-depot/.cargo/: audit.toml
andref-ipfs-depot/assets/: app.css  app.js  index.html  invalid.html
andref-ipfs-depot/src/: assets.rs  config.rs  discord.rs  ipfs.rs  main.rs  state.rs  tokens.rs  web.rs
eight/: CLAUDE.md  octodns-config.nix  outputs.nix
eight/per-domain/: andref.app.nix  andref.yaml.nix  atproto-handles.toml  yart.me.nix  yut.to.nix  yuto.ink.nix  yuto.sh.nix  yuto.wiki.nix
experimental/1nub/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
experimental/2nub/: README.md  flake.nix  package-lock.json  package.json  tsconfig.json
experimental/atmii/: .gitignore  .prettierrc  README.md  flake.nix  package.json  pnpm-lock.yaml
experimental/bodgy-mv/: __main__.py
experimental/chatproto/: .gitignore  CLAUDE.md  (+3 more)
experimental/jupiter-legacy/app/: pyproject.toml
flake-profiles/: CLAUDE.md  outputs.nix
jupiter/: .gitignore  Pulumi.dev.yaml  Pulumi.dev.yaml.bak  __main__.py  generated-nixie.json  generated-serverref.json  readme.md  requirements-freeze.txt  requirements.txt
lib/: yaml.nix
magic/: CLAUDE.md
milky-way/: CLAUDE.md  chartfile.yaml  charts.jsonnet
secrets/: milky-way-token.txt  milky-way.json  mopidy-config.toml.txt
soup/: default.nix  exports.nix  extraPackages.nix  flake.nix
whale/: outputs.nix  readme.md
(+310 files in other folders)
