[package]
name = "andref-ipfs-depot"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "multipart",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = [
  "builder",
  "client",
  "gateway",
  "http",
  "model",
  "rustls_backend",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
